# onuion

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
benchmark/: benchmark.py
docs/: api.md  huggingface.md  model.md  risk_types.md
examples/: basic_usage.py  convert_model.py  generate_training_data.py  huggingface_download.py  huggingface_upload.py  json_to_npz.py  load_from_json.py  sample_session.json
onuion/: __init__.py  feature_extractor.py  huggingface.py  inference.py  model.py  risk_aggregator.py  rule_engine.py  train.py
tests/: test_analyze_risk_script.py  test_feature_extractor.py  test_inference.py  test_rule_engine.py
